# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: github-actions.yml
page_loader/: directory_and_names.py  logger.py  page_downloader.py  resources.py
page_loader/scripts/: page_loader.py
tests/: test_errors.py  test_naming.py  test_page_loader.py
tests/fixtures/: expected_page.html  original_page.html  web_page.html
